tests/ui/consts/issue-18294.stderr
error: pointers cannot be cast to integers during const eval
  --> $DIR/issue-18294.rs:3:31
   |
LL |     const Y: usize = unsafe { &X as *const u32 as usize };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error: aborting due to previous error

